--- a/Assignment_2_HV.Rmd
+++ b/Assignment_2_HV.Rmd
@@ -17,7 +17,7 @@ data <- read.csv('activity.csv')
 The following code was used to determine the total number of steps per day
 ```{r histogram}
 agg <- aggregate(steps~date,data,sum)
-hist(agg$steps)
+hist(agg$steps,xlab='Number of steps',ylab='Frequency', main='Histogram of daily number of steps')
 ```
 
 ## What is mean total number of steps taken per day?
@@ -47,7 +47,7 @@ All missing values were imputed using the average number of steps for that parti
 ```{r}
 data$steps[is.na(data$steps)] <- dayagg$steps[match(data$interval,dayagg$interval)][which(is.na(data$steps))]
 impagg <- aggregate(steps~date,data,sum)
-hist(impagg$steps)
+hist(impagg$steps,xlab='Number of steps',ylab='Frequency', main='Histogram of daily number of steps after imputation')
 ```
 
 The only difference between the unimputed and imputed histograms is the height of the column showing the frequency of days between 10k and 15k steps. Its frequency goes up from 30 to 35 after imputation.
@@ -61,11 +61,17 @@ impmediansteps <- median(impagg$steps)
 The mean number of steps per day is `r format(impmeansteps, scientific=F)` and the median number of steps is `r format(impmediansteps, scientific=F)`.
 
 ## Are there differences in activity patterns between weekdays and weekends?
-The following code adds a column 
+The following code adds a column labeling weekdays and weekends and produces a plot showing the average number of steps for weekdays and weekends
 ```{r}
 wkday <- c('Monday','Tuesday','Wednesday','Thursday','Friday')
 data$weekend <- factor((weekdays(as.Date(data$date)) %in% wkday), 
          levels=c(FALSE, TRUE), labels=c('weekend', 'weekday'))
 
 wkndagg <- aggregate(steps~interval + weekend,data,mean)
+
+library(ggplot2)
+
+ggplot(data=wkndagg,aes(x=interval,y=steps,group=weekend,color=weekend)) + geom_line() + labs(x='Time of day', y='Average steps',title='Average steps for weekdays and weekends')
 ```
+
+There is an increased number of steps during weekends, mostly in the afternoon and evenings. Also, there is an increase in the number of steps between 5:00 and 10:00 during weekdays, possibly due to commuting and pre-work exercise.
