--- a/Assignment_2_HV.Rmd
+++ b/Assignment_2_HV.Rmd
@@ -8,7 +8,7 @@ output:
 
 ## Loading and preprocessing the data
 The following code shows how the data was imported.
-**Note:** When testing the file on RStudio, set your working directory by selecting the folder under the Files tab, clicking More followed by *Set As Working Directory*
+**Note:** When testing the code on RStudio, donwload the csv and markdown files to your folder of interest. Then, set your working directory by selecting the appropriate folder under the Files tab, clicking More followed by *Set As Working Directory*.
 ```{r data import}
 data <- read.csv('activity.csv')
 ```
