Another final comit

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -10,6 +10,8 @@ output:
 The following code shows how the data was imported.
 **Note:** When testing the code on RStudio, donwload the csv and markdown files to your folder of interest. Then, set your working directory by selecting the appropriate folder under the Files tab, clicking More followed by *Set As Working Directory*.
 ```{r data import}
+fil <- download.file('https://d396qusza40orc.cloudfront.net/repdata%2Fdata%2Factivity.zip','activity.zip')
+unzip('activity.zip')
 data <- read.csv('activity.csv')
 ```
 
@@ -33,6 +35,7 @@ The following code is used to determine the average number of steps per 5-min in
 dayagg <- aggregate(steps~interval,data,mean)
 plot(dayagg$interval,dayagg$steps,type = "l",xlab='Time of day',ylab='Average number of steps', main='Average daily number of steps per 5-min interval')
 ```
+
 The following code is used to determine the interval that contains the largest number of steps
 ```{r}
 maxsteps <- max(dayagg$steps)
